--- a/blog/sample/TouchPull/gradle.properties
+++ b/blog/sample/TouchPull/gradle.properties
@@ -15,3 +15,35 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+POM_BINTRAY_PRPO=maven
+POM_PACKAGING=aar
+POM_NAME=OkHttpPacker
+POM_GROUP_ID=net.qiujuer.widget
+POM_URL=https://github.com/qiujuer/BeFoot
+POM_GIT_URL=https://github.com/qiujuer/BeFoot.git
+POM_SCM_URL=https://github.com/qiujuer/BeFoot
+POM_SCM_CONNECTION=scm:git@github.com:qiujuer/BeFoot.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:qiujuer/BeFoot.git
+POM_LICENCE_COMMENTS=A business-friendly OSS license
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_LICENCE_ALL=["Apache-2.0"]
+
+POM_DEVELOPER_ID=qiujuer
+POM_DEVELOPER_NAME=Qiu Ju
+POM_DEVELOPER_EMAIL=qiujuer@live.cn
+POM_DEVELOPER_URL=http://www.qiujuer.net
+POM_ISSUE_MANAGEMENT_SYSTEM=Github
+POM_ISSUE_MANAGEMENT_URL=https://github.com/qiujuer/BeFoot/issues
+POM_INCEPTION_YEAR=2016
+
+ANDROID_BUILD_MIN_SDK_VERSION=14
+ANDROID_BUILD_TARGET_SDK_VERSION=24
+ANDROID_BUILD_TOOLS_VERSION=24.0.1
+ANDROID_BUILD_SDK_VERSION=24
+
+VERSION_NAME=1.0.0-beta1
+VERSION_CODE=1608171100
