--- a/android/widget/TouchPull/app/build.gradle
+++ b/android/widget/TouchPull/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.1.1'
     testCompile 'junit:junit:4.12'
-    compile project(':touchpull')
+    //compile project(':touchpull')
+    compile 'net.qiujuer.widget:touchpull:1.0.0-beta2'
 }
